force-app/main/default/objects/Affiliation_Program_Management_Event__e/Affiliation_Program_Management_Event__e.object-meta.xml
<CustomObject>
    <description>This event is used for orchestration of steps associated with Affiliation Program Management and the Affiliation Staging Record object.</description>
    <label>Affiliation Program Management Event</label>
    <pluralLabel>Affiliation Program Management Events</pluralLabel>
</CustomObject>