force-app/main/default/objects/Affiliation_Program_Management_Event__e/fields/Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Algorithm__c</fullName>
    <description>Defines the algorithm to be executed within the platform event initiated flow.</description>
    <label>Algorithm</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>