force-app/main/default/objects/Affiliation_Program_Management_Event__e/fields/Last_Processed_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Created_Date__c</fullName>
    <label>Last Processed Created Date</label>
    <type>DateTime</type>
</CustomField>