force-app/main/default/objects/Affiliation_Program_Management_Event__e/fields/Last_Processed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Record_Ids__c</fullName>
    <label>Last Processed Record Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>