force-app/main/default/objects/Affiliation_Program_Management_Event__e/fields/Queue_Next_Step_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Queue_Next_Step_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queue Next Step Enabled</label>
    <type>Checkbox</type>
</CustomField>