force-app/main/default/objects/Affiliation_Program_Management_Event__e/fields/ReQueues__c.field-meta.xml
<CustomField>
    <fullName>ReQueues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ReQueues</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>