force-app/main/default/objects/Affiliation_Program_Management_Event__e/fields/Toggled_Qualified_UFID__c.field-meta.xml
<CustomField>
    <fullName>Toggled_Qualified_UFID__c</fullName>
    <label>Toggled Qualified UFID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>